// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with_munging.js 1`] = `
/**
 * @flow
 */

class Foo {
  _method(): string {
    return 'this is private';
  }
}

class Bar extends Foo {
  test() {
    (this._method(): string); // error
  }
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/**
 * @flow
 */

class Foo {
  _method(): string {
    return "this is private";
  }
}

class Bar extends Foo {
  test() {
    (this._method(): string); // error
  }
}

`;

exports[`without_munging.js 1`] = `
/**
 * @flow
 * @preventMunge
 */

class Foo {
  _method(): string {
    return 'this is not private';
  }
}

class Bar extends Foo {
  test() {
    (this._method(): string); // ok
  }
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/**
 * @flow
 * @preventMunge
 */

class Foo {
  _method(): string {
    return "this is not private";
  }
}

class Bar extends Foo {
  test() {
    (this._method(): string); // ok
  }
}

`;
